# djangoDockerp

./: Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
djangoDockerP/: asgi.py  settings.py  urls.py  wsgi.py
