[tool.poetry]
name = "djangodockerp"
version = "0.1.0"
description = "Testing Django Poetry and docker"
authors = ["derrosilee <derrossilee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
